css/style.css
html {
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    margin: auto auto;
    max-width: 1000px;
    padding: 0 10px;
    font-family: "Arial", sans-serif;
    background-color: #f7f7f7;  /*#fffff8;*/
}

/********* Everywhere ************/
a {
    color: black;
}

a:hover {
    color: white;
    background-color: blue;
}

.blocktext {
    text-align: justify;
}

pre, code {
    font-family: Consolas, "Ubuntu Mono", "Liberation Mono", "Courier New", monospace;
}

/******** Header *************/
nav {
    margin: 0;
    padding: 5px;
    border-bottom: 1px solid grey;
    font-size: 30px;
}

nav a {
    margin: 10px;
    text-align: center;
    text-decoration: none;
}

nav img {
    height: 1em;
}

/**** Body *****/
article {
    max-width: 800px;
    margin: auto auto;
    margin-top: 20px;
    line-height: 1.6;
    font-size: 18px;
}

.flex-wrapper {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
    justify-content: space-between;
}

/***** Footer *****/

footer {
    color: grey;
    margin-top: 5em;
    font-size: 14px;
    text-align: left;
}

footer a {
    color: grey;
}

